tests/paczka2/big_fuzzy/63536842.err
Error in line 8: B3Ji S377 67,9
Error in line 9: lczqb A752 71,6
Error in line 12: feHeW A103 62,1
Error in line 23: iJ7yUJ7Wkio S377 18,0
Error in line 10: B3Ji A806 65,4
Error in line 38: feHeW A752 45,9
Error in line 40: A806 A752 23,9
Error in line 36: iJ7yUJ7Wkio A752 66,2
Error in line 55: lczqb A103 25,2
Error in line 32: B3Ji A103 64,7
Error in line 56: lczqb A752 76,8
Error in line 58: B3Ji S377 61,4
Error in line 59: lczqb A806 47,0
Error in line 47: A806 A103 168,8
Error in line 87: iJ7yUJ7Wkio A752 65,2
Error in line 89: iJ7yUJ7Wkio S377 45,6
Error in line 90: iJ7yUJ7Wkio A103 3,7
Error in line 83: lczqb A752 281,2
Error in line 97: lczqb A103 87,1
Error in line 96: iJ7yUJ7Wkio A752 43,1
Error in line 99: iJ7yUJ7Wkio A806 47,2
Error in line 92: s8Bv A752 23,7
Error in line 82: feHeW S377 1,4
Error in line 104: B3Ji A806 45,1
Error in line 101: s8Bv A806 11,9
Error in line 110: s8Bv A752 54,6
Error in line 107: feHeW A752 14,7
Error in line 124: feHeW A752 97,2
Error in line 114: 5S6pA7QTlmr S377 0,4
Error in line 132: B3Ji A806 14,9
Error in line 129: 5S6pA7QTlmr A806 24,9
Error in line 137: 5S6pA7QTlmr S377 94,0
Error in line 138: 5S6pA7QTlmr A752 98,3
Error in line 103: iJ7yUJ7Wkio A103 26,4
Error in line 148: B3Ji S377 9,0
Error in line 151: A806 S377 71,3
Error in line 154: A806 A806 100,0
Error in line 157: A806 S377 52,6
Error in line 171: iJ7yUJ7Wkio A103 4,4
Error in line 161: A806 A806 74,8
Error in line 168: B3Ji A752 16,3
Error in line 184: B3Ji A806 19,1
Error in line 204: iJ7yUJ7Wkio A806 95,8
Error in line 206: 5S6pA7QTlmr A103 33,7
Error in line 220: s8Bv S377 -2,6
Error in line 219: lczqb S377 3,7
Error in line 221: lczqb A806 24,7
Error in line 203: s8Bv S377 28,6
Error in line 218: feHeW A806 82,4
Error in line 231: iJ7yUJ7Wkio A752 73,3
Error in line 226: B3Ji S377 238,4
Error in line 241: A806 A806 40,8
Error in line 239: B3Ji A752 85,2
